[metadata]
name = pyfron
version = 0.0.2
author = George Vasiliadis
author_email = geor.vasiliadis@gmail.com
description = An OpenDR-based face recognition CLI app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GeorgeVasiliadis/pyfron
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: System
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    pyfron = pyfron.__main__:main

[options.packages.find]
where = .